# pydantic_snowflake

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
pydantic_snowflake/: __init__.py  const.py  generator.py  snowflake.py
