[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-snowflake"
description = "A Pydantic custom type for handling Snowflake IDs with ease."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chih-Hao Chuang", email = "contact@chih-hao.xyz" }]
version = "0.1.1"
readme = "README.md"
keywords = ["pydantic", "snowflake", "custom type", "data validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/zhihao1021/pydantic_snowflake"
GitHub = "https://github.com/zhihao1021/pydantic_snowflake" 
Bug = "https://github.com/zhihao1021/pydantic_snowflake/issues"
Changelog = "https://github.com/zhihao1021/pydantic_snowflake/blob/main/CHANGELOG.md"
